--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "spatie/laravel-ignition": "^2.9",
-        "spatie/laravel-medialibrary": "^11.10"
+        "spatie/laravel-medialibrary": "^11.10",
+        "symfony/http-client": "^7.2",
+        "symfony/mailgun-mailer": "^7.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
