--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/tinker": "^2.9",
         "spatie/laravel-ignition": "^2.9",
         "spatie/laravel-medialibrary": "^11.10",
+        "spatie/laravel-ray": "^1.39",
         "symfony/http-client": "^7.2",
         "symfony/mailgun-mailer": "^7.1"
     },
