--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,6 +30,7 @@ jobs:
         touch database/database.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
+        APP_ENV: testing
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: php artisan test
