--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,6 +28,9 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: npm Install 
+      run: npm install --no-save
+           npm run build 
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         APP_ENV: testing
